# programming-languages-research

./: .gitignore  COMPILERS.md  CONCURRENCY.md  Cargo.toml  DEBUGGERS.md  MEMORY.md  MODULES.md  PACKAGING.md  PARSERS.md  README.md  REPRESENTATIONS.md  TRACERS.md  TYPES.md  install.sh  package-lock.json  package.json  research.rs
.cargo/: config.toml
data/: 1ml.json  abstract-syntax-trees.json  activej-codegen.json  activej-eventloop.json  activej-specializer.json  actors.json  ada.json  aeneas-verifier.json  akka.json  algebraic-data-types.json  allocators.json  alloy-gc.json  ambiguity-and-parse-forests.json  antlr4.json  apple-mie.json  arborescent-gc.json  arena-allocation.json  arm-mte.json  arm-pac.json  arrayforth-ga144.json  asap-region-inference.json  asdl.json  astro-framework.json  async-await.json  async-debugging.json  ats-language.json  austral.json  auto-vectorization.json  autofdo.json  automated-fault-isolation.json  azul-c4.json  babel-pipeline.json  babylon-tornadovm.json  backend-selection.json  backpack-haskell.json  ballerina-bir.json  basic-block-versioning.json  bazel.json  beam-bytecode.json  beam-gc.json  (+547 more)
deploy/: programming-languages-research.service  research.service  research@.service
schema/: record.schema.json  tag.schema.json
scripts/: research.js
source/: research.js
static/: app.js
summary/: app.css  app.js  index.html
tags/: allocator.json  backend-cranelift.json  backend-llvm.json  backend-mlir.json  backend-qbe.json  backend-vm.json  build-systems.json  compiler.json  decision-backend.json  decision-frontend.json  (+70 more)
(+9 files in other folders)
