[package]
name = "programming-languages-research"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "programming-languages-research"
path = "research.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-server = "0.8"
brotli = "8.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
http = "1.2"
mime_guess = "2.0"
rustls-acme = { version = "0.15.1", features = ["axum", "tokio", "webpki-roots", "ring"], default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
walkdir = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
